fotos y inicio de maqueteado

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
 </head>
 <body>
-    
+    <div class="logo"><img src="images/logo.svg" alt="logo"></div>
+    <div class="tip-calculadora">
+        <div class="partOne">
+            <label for="">Bill</label>
+            <input type="number" class="input bill-input" id="bill-input">
+            <label for="select Tip %"></label>
+            <div class="tip">
+                <div class="tips tip-5"></div>
+                <div class="tips tip-5"></div>
+                <div class="tips tip-5"></div>
+                <div class="tips tip-5"></div>
+                <div class="tips tip-5"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
