--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Calculadora</title>
 </head>
 <body>
@@ -18,8 +19,32 @@
                 <div class="tips tip-5"></div>
                 <div class="tips tip-5"></div>
                 <div class="tips tip-5"></div>
+                <div id="tip-custom"><input type="number" class="tip-custom" placeholder="CUSTOM"></div>
             </div>
+            <div class="peoplelabel">
+                <label for="">number of people</label>
+                <label for="" class="error">Can't be zero</label>
+            </div>
+            <input type="number" class="input people-input"/>
+        </div>
+        <div class="result">
+            <div class="tip-amount">
+                <div class="text">
+                    <p>tip-amount</p>
+                    <p class="person">/ person</p>
+                </div>
+                <div class="amount" id="tip-amount">$4.27</div>
+            </div>
+            <div class="total">
+                <div class="text">
+                    <p>total</p>
+                    <p class="person">/ person</p>
+                </div>
+                <div class="amount" id="total-amount">$32.79</div>
+            </div>
+            <div class="reset">RESET</div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
