arreglo del html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="partOne">
             <label for="">Bill</label>
             <input type="number" class="input bill-input" id="bill-input">
-            <label for="select Tip %"></label>
+            <label for="">select Tip %</label>
             <div class="tip">
-                <div class="tips tip-5"></div>
-                <div class="tips tip-5"></div>
-                <div class="tips tip-5"></div>
-                <div class="tips tip-5"></div>
-                <div class="tips tip-5"></div>
+                <div class="tips tip-5">5%</div>
+                <div class="tips tip-5">10%</div>
+                <div class="tips tip-5 active-tip">15%</div>
+                <div class="tips tip-5">25%</div>
+                <div class="tips tip-5">50%</div>
                 <div id="tip-custom"><input type="number" class="tip-custom" placeholder="CUSTOM"></div>
             </div>
             <div class="peoplelabel">
