11:40 hasta aqui llegue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div id="tip-custom"><input type="number" class="tip-custom" placeholder="CUSTOM"></div>
             </div>
             <div class="peoplelabel">
-                <label for="">number of people</label>
+                <label for="">number of people.</label>
                 <label for="" class="error">Can't be zero</label>
             </div>
             <input type="number" class="input people-input"/>
